fix all notebooks to display itables hopefully

--- a/docs/documentation/fhiraggregatorintro.ipynb
+++ b/docs/documentation/fhiraggregatorintro.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
    ],
    "source": [
     "# Install the jq json formatter tool\n",
-    "!apt-get install -yq jq > /dev/null\n",
+    "!sudo -s apt-get install -yq jq > /dev/null\n",
     "!jq --version\n",
     "\n",
     "! curl -s $FHIR_BASE'/ResearchStudy?_elements=identifier&identifier.use=official' | jq -rc '.entry[] | [ (.resource.identifier[] | .value), .fullUrl]' | sort"
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
