attempt to fix init_notebook_mode not defined

--- a/docs/documentation/filterexamples.ipynb
+++ b/docs/documentation/filterexamples.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "853dd1f5-7b61-4022-8620-2a49f396d0f3",
    "metadata": {
     "tags": [
@@ -54,7 +54,7 @@
     "%%capture [--no-stdout]\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import itables\n",
+    "from itables import init_notebook_mode, show\n",
     "init_notebook_mode(connected=True)\n",
     "import itables.options as opt\n",
     "\n",
@@ -890,7 +890,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
