--- a/docs/documentation/filterexamples.ipynb
+++ b/docs/documentation/filterexamples.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "7b5f68d7",
    "metadata": {
     "tags": [
@@ -21,7 +21,7 @@
     }
    ],
    "source": [
-    "!sudo -s apt-get install -yq jq > /dev/null\n",
+    "!apt-get install -yq jq\n",
     "!jq --version"
    ]
   },
