--- a/docs/documentation/filterexamples.ipynb
+++ b/docs/documentation/filterexamples.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "7b5f68d7",
    "metadata": {},
    "outputs": [
@@ -18,6 +18,7 @@
     }
    ],
    "source": [
+    "!apt-get update && apt-get install -y sudo\n",
     "!sudo apt-get update && sudo apt-get install -y jq\n",
     "!jq --version"
    ]
