separate out commands

--- a/docs/documentation/filterexamples.ipynb
+++ b/docs/documentation/filterexamples.ipynb
@@ -18,8 +18,9 @@
     }
    ],
    "source": [
-    "!apt-get update && apt-get install -y sudo\n",
-    "!sudo apt-get update && sudo apt-get install -y jq\n",
+    "!apt-get update\n",
+    "!apt-get install -y sudo\n",
+    "!sudo apt-get install -y jq\n",
     "!jq --version"
    ]
   },
