remove jq invocations for now

--- a/docs/documentation/fhirextensions.ipynb
+++ b/docs/documentation/fhirextensions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "853dd1f5-7b61-4022-8620-2a49f396d0f3",
    "metadata": {
     "tags": [
@@ -21,8 +21,8 @@
     "opt.classes=\"display nowrap compact\"\n",
     "opt.buttons=[\"copyHtml5\", \"csvHtml5\", \"excelHtml5\"]\n",
     "opt.maxBytes=0\n",
-    "%env FHIR_BASE= https://google-fhir.fhir-aggregator.org\n",
     "\n",
+    "%env FHIR_BASE= https://google-fhir.fhir-aggregator.org\n",
     "!fq vocabulary vocabulary.tsv --fhir-base-url $FHIR_BASE\n",
     "df = pd.read_csv('vocabulary.tsv', sep='\\t').fillna('')"
    ]
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "4e3a0726-1220-45dc-b26c-fd7d0f8e71f2",
    "metadata": {},
    "outputs": [
@@ -601,7 +601,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
