--- a/docs/documentation/vocabulary.ipynb
+++ b/docs/documentation/vocabulary.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "bed0fc14-8774-45d9-8ccc-77e30f521a91",
    "metadata": {
     "tags": [
@@ -122,48 +122,6 @@
    "source": [
     "!pip install fhir-aggregator-client --no-cache-dir --quiet\n",
     "!fq"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "5ca254bf",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "The system cannot find the path specified.\n",
-      "'jq' is not recognized as an internal or external command,\n",
-      "operable program or batch file.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Install the jq json formatter tool\n",
-    "!sudo -s apt-get install -yq jq > /dev/null\n",
-    "!jq --version"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "81de2dbb",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "'jq' is not recognized as an internal or external command,\n",
-      "operable program or batch file.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# get the native FHIR vocabulary Observation\n",
-    "! curl -s $FHIR_BASE'/Observation?code=vocabulary' | jq . | head -50"
    ]
   },
   {
@@ -670,7 +628,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
