--- a/docs/documentation/fhirquery.ipynb
+++ b/docs/documentation/fhirquery.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "55d402b9",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "bd1e35f4",
    "metadata": {},
    "outputs": [
@@ -62,13 +62,6 @@
       "  run         Run GraphDefinition queries.\n",
       "  results     Work with the results of a GraphDefinition query.\n",
       "  vocabulary  FHIR-Aggregator's key Resources and CodeSystems.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Creating directory: C:\\Users\\Parker.Gray\\.fhir-aggregator\n"
      ]
     }
    ],
@@ -113,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "3b368aea",
    "metadata": {},
    "outputs": [
@@ -144,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "bebb134b",
    "metadata": {},
    "outputs": [
@@ -162,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "57469855",
    "metadata": {},
    "outputs": [
@@ -170,6 +163,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "warning: Database already exists at C:\\Users\\Parker.Gray\\.fhir-aggregator\\fhir-graph.sqlite and will be used. If this is not what you intended, please remove the existing database or provide a new path.\n",
       "condition-graph is valid FHIR R5 GraphDefinition\n",
       "\n",
       "¡ Fetching https://google-fhir.fhir-aggregator.org/Condition?code:text=cholangiocarcinoma\n",
@@ -199,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "1c5a4b81",
    "metadata": {},
    "outputs": [
@@ -398,7 +392,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
