edit grammar of survivalcurve example

--- a/docs/documentation/survivalcurves.ipynb
+++ b/docs/documentation/survivalcurves.ipynb
@@ -5,10 +5,9 @@
    "id": "e7b3cd08",
    "metadata": {},
    "source": [
-    "# FHIR-Aggregator survival anaysis\n",
+    "# Survival curve example\n",
     "\n",
-    "In this notebook we will show how to retrieve data from breast cancer patients in TCGA and compare the Kaplan-Meier curves of two cohorts.\n",
-    "The cohorts are white and african american pateints that are 50 years or younger."
+    "In this notebook we will show how to retrieve data from breast cancer patients within the Cancer Genome Atlas and compare the Kaplan-Meier curves of two cohorts. Theese cohorts are white and african american pateints that are 50 years or younger."
    ]
   },
   {
@@ -36,7 +35,7 @@
    "id": "2724b2a0",
    "metadata": {},
    "source": [
-    "## Use FHIR-Aggregator to retrieve the necessary data"
+    "## Use Fhir-query to retrieve the necessary data"
    ]
   },
   {
@@ -115,9 +114,9 @@
    "id": "7acb68b7",
    "metadata": {},
    "source": [
-    "## Surviving analysis\n",
+    "## Survival analysis\n",
     "\n",
-    "After retrieveing the data, we then use the python library lifelines to plor Kaplan-Meier plots of two groups (white and african american) of Breat cancer patients that are 50 years old or younger."
+    "After retrieving the data, we then use the python library lifelines to plot Kaplan-Meier curves of our two cohorts (white and african american patients who are 50 years or younger)."
    ]
   },
   {
@@ -199,7 +198,7 @@
    "id": "e4c8deb6",
    "metadata": {},
    "source": [
-    "Get the necessary data for [`lifelines` package](lifelines.readthedocs.io)."
+    "Get the necessary data for the [`lifelines` package](lifelines.readthedocs.io) to generate a plot."
    ]
   },
   {
@@ -251,7 +250,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
