Remove old version

--- a/docs/documentation/fhirquery.ipynb
+++ b/docs/documentation/fhirquery.ipynb
@@ -41,7 +41,7 @@
     }
    ],
    "source": [
-    "!pip install fhir-aggregator-client==0.1.8 --no-cache-dir --quiet"
+    "!pip install fhir-aggregator-client --no-cache-dir --quiet"
    ]
   },
   {
